Token modification to verify ssh key function

--- a/environment.conf
+++ b/environment.conf
@@ -6,3 +6,5 @@ config_version      = 'scripts/config_version.sh $environmentpath $environment'
 # https://docs.puppetlabs.com/puppetserver/1.0/release_notes.html#new-feature-admin-api-for-refreshing-environments
 # https://docs.puppetlabs.com/puppet/3.7/reference/environments_configuring.html#environmenttimeout
 environment_timeout = 0 
+
+#Arbitrary file change
